package no.kristiania.pgr200.cli;


import java.io.IOException;
import java.util.Scanner;

public class InteractiveInsert extends CommandHandler {
    public InteractiveInsert(Scanner sc) {
        super(sc);
    }
}
